--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "async": "^3.1.0",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.18.3",
+    "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "ejs": "^2.6.1",
     "express": "^4.16.4",
@@ -29,6 +30,7 @@
     "mv": "^2.1.1",
     "mysql": "^2.16.0",
     "node-gcm": "^1.0.3",
+    "nodemailer": "^6.4.17",
     "nodemon": "^2.0.6",
     "npm": "^6.4.1",
     "passport": "^0.4.0",
