--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
   "author": "Shubham Chowdhuri",
   "license": "ISC",
   "dependencies": {
-    "@google-cloud/vision": "^2.1.1",
     "async": "^3.1.0",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.18.3",
@@ -18,9 +17,7 @@
     "ejs": "^2.6.1",
     "express": "^4.16.4",
     "express-myconnection": "^1.0.4",
-    "firebase-admin": "^9.0.0",
     "formidable": "^1.2.1",
-    "fs": "0.0.1-security",
     "images-pdf": "^1.0.3",
     "images-to-pdf": "^1.0.3",
     "jsonwebtoken": "^8.5.1",
@@ -29,7 +26,6 @@
     "moment": "^2.24.0",
     "mv": "^2.1.1",
     "mysql": "^2.16.0",
-    "node-gcm": "^1.0.3",
     "nodemailer": "^6.4.17",
     "nodemon": "^2.0.6",
     "npm": "^6.4.1",
@@ -37,7 +33,6 @@
     "passport-google-oauth20": "^2.0.0",
     "passport-local": "^1.0.0",
     "pdf-parse": "^1.1.1",
-    "stopword": "^1.0.1",
-    "string-similarity": "^4.0.2"
+    "stopword": "^1.0.1"
   }
 }
